# GOOSE-encryption

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/encryption_timings/: decryption.c  decryption.h  encryption.c  encryption.h  encryption_config.h  latency.c  latency.h
src/encryption_timings/python_implementations/: main.py
src/mininet_setup/: c_switch_handle_S1.c  c_switch_handle_S2.c  mininet_setup.py  receive_goose.py  send_goose.py
src/plots/: measure_usage.py  plot_latency.py  plot_throughput.py
src/python_switch_handles/: switch_handle_S1.py  switch_handle_S2.py
src/rpi/: rp.c  rp_latency.c
